styles/global.css
@import 'tailwindcss';

@plugin '@headlessui/tailwindcss';

@custom-variant dark (&:is([data-theme-dark="true"] *));

@theme {
  --flex-basis-22: 5.5rem;

  --width-22: 5.5rem;
  --width-100: 25rem;
  --width-112: 28rem;
}

/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }
}

@layer base {

  ul,
  ol {
    list-style-image: none;
    list-style-position: inside;
    list-style-type: disc;
  }

  @keyframes border-pulse {
    0%, 100% {
      border-color: var(--color);
      border-width: 2px;
    }
    50% {
      border-color: var(--color-incomplete);
      border-width: 6px;
    }
  }
}

@layer base {
  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--bg-color);
  color: var(--color);
}

/* Make background transparent when mathematical background is active */
body.mathematical-background-active {
  background-color: transparent !important;
}

.theme-accessible div {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -o-transition: none !important;
  -ms-transition: none !important;
  transition: none !important;
}

.theme-accessible {
  --bg-color: rgb(0, 0, 0);
  --bg-color-2: rgb(20, 20, 20);
  --bg-color-3: rgb(50, 50, 50);
  --bg-color-4: rgb(80, 80, 80);
  --color: rgb(255, 255, 255);
  --color-complete: rgb(0, 200, 0);
  --color-error: rgb(255, 50, 50);
  --color-gray: rgb(180, 180, 180);
  --color-incomplete: rgb(230, 200, 20);
  --level-block: rgb(0, 0, 0);
  --level-block-border: rgb(255, 193, 7);
  --level-end: rgb(60, 166, 229);
  --level-grid: rgb(255, 255, 255);
  --level-grid-text: rgb(0, 0, 0);
  --level-grid-used: rgb(247, 127, 171);
  --level-hole: rgb(7, 187, 202);
  --level-hole-border: rgb(0, 77, 64);
  --level-player: rgb(246, 97, 96);
  --level-player-extra: rgb(175, 255, 117);
  --level-player-text: rgb(0, 0, 0);
  --level-wall: rgb(0, 0, 0);
}

.theme-classic {
  --bg-color: rgb(51, 51, 51);
  --bg-color-2: rgb(70, 70, 70);
  --bg-color-3: rgb(100, 100, 100);
  --bg-color-4: rgb(150, 150, 150);
  --color: rgb(255, 255, 255);
  --color-complete: rgb(0, 200, 0);
  --color-error: rgb(255, 50, 50);
  --color-gray: rgb(180, 180, 180);
  --color-incomplete: rgb(230, 200, 20);
  --level-block: rgb(174, 101, 100);
  --level-block-border: rgb(215, 155, 154);
  --level-end: rgb(255, 255, 255);
  --level-grid: rgb(100, 118, 50);
  --level-grid-text: rgb(0, 0, 0);
  --level-grid-used: rgb(126, 152, 26);
  --level-hole: rgb(51, 51, 51);
  --level-hole-border: rgb(100, 100, 100);
  --level-player: rgb(40, 40, 40);
  --level-player-extra: rgb(199, 44, 44);
  --level-player-text: rgb(255, 255, 255);
  --level-wall: rgb(0, 0, 0);
}

.theme-monkey {
  --bg-color: rgb(40, 13, 6);
  --bg-color-2: rgb(86, 34, 11);
  --bg-color-3: rgb(90, 67, 55);
  --bg-color-4: rgb(96, 48, 16);
  --color: rgb(255, 255, 255);
  --color-complete: rgb(141, 239, 141);
  --color-error: rgb(178, 34, 34);
  --color-gray: rgb(128, 128, 128);
  --color-incomplete: rgb(218, 165, 32);
  --level-block: rgb(47, 79, 79);
  --level-block-border: rgb(145, 165, 116);
  --level-end: rgb(255, 248, 144);
  --level-grid: rgb(46, 139, 87);
  --level-grid-text: rgb(0, 0, 0);
  --level-grid-used: rgb(0, 128, 0);
  --level-hole: rgb(51, 51, 51);
  --level-hole-border: rgb(100, 100, 100);
  --level-player: rgb(233, 161, 136);
  --level-player-extra: rgb(160, 45, 45);
  --level-player-text: rgb(0, 0, 0);
  --level-wall: rgb(112, 67, 54);
}

.theme-monkey-4 {
  animation: rotateMonkey 2s infinite linear;
}

@keyframes rotateMonkey {
  0% {
    transform: rotate(-10deg);
  }

  50% {
    transform: rotate(10deg);
  }

  100% {
    transform: rotate(-10deg);
  }
}

.theme-dark {
  --bg-color: rgb(0, 0, 0);
  --bg-color-2: rgb(20, 20, 20);
  --bg-color-3: rgb(50, 50, 50);
  --bg-color-4: rgb(80, 80, 80);
  --color: rgb(255, 255, 255);
  --color-complete: rgb(0, 200, 0);
  --color-error: rgb(255, 50, 50);
  --color-gray: rgb(180, 180, 180);
  --color-incomplete: rgb(230, 200, 20);
  --level-block: rgb(0, 0, 0);
  --level-block-border: rgb(200, 139, 97);
  --level-end: rgb(255, 255, 255);
  --level-grid: rgb(120, 120, 120);
  --level-grid-text: rgb(0, 0, 0);
  --level-grid-used: rgb(90, 90, 90);
  --level-hole: rgb(30, 30, 30);
  --level-hole-border: rgb(60, 60, 60);
  --level-player: rgb(255, 165, 0);
  --level-player-extra: rgb(255, 55, 55);
  --level-player-text: rgb(0, 0, 0);
  --level-wall: rgb(0, 0, 0);
}

.theme-light {
  --bg-color: rgb(255, 255, 255);
  --bg-color-2: rgb(240, 240, 240);
  --bg-color-3: rgb(220, 220, 220);
  --bg-color-4: rgb(150, 150, 150);
  --color: rgb(0, 0, 0);
  --color-complete: rgb(0, 218, 0);
  --color-error: rgb(255, 50, 50);
  --color-gray: rgb(100, 100, 100);
  --color-incomplete: rgb(224, 192, 0);
  --level-block: rgb(181, 164, 110);
  --level-block-border: rgb(216, 210, 156);
  --level-end: rgb(255, 181, 181);
  --level-grid: rgb(153, 204, 254);
  --level-grid-text: rgb(0, 0, 0);
  --level-grid-used: rgb(172, 214, 255);
  --level-hole: rgb(98, 98, 98);
  --level-hole-border: rgb(165, 165, 165);
  --level-player: rgb(64, 254, 64);
  --level-player-extra: rgb(244, 86, 86);
  --level-player-text: rgb(0, 0, 0);
  --level-wall: rgb(76, 100, 127);
}
/* ... */

